--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0"
   },
