--- a/client/package.json
+++ b/client/package.json
@@ -27,17 +27,21 @@
     "@nivo/line": "^0.84.0",
     "@nivo/pie": "^0.84.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "bootstrap": "^5.3.4",
     "chart.js": "^4.4.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "mongoose": "^8.13.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.9",
+    "react-bootstrap-icons": "^1.11.5",
     "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
